thrasyboulos/hydor/overlays/romaioi/olympia/homeros/deployment.yaml
# Source: homeros/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeros
  labels:
    app: homeros
  annotations:
    volumes.odysseia.io/secrets: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeros
  template:
    metadata:
      labels:
        app: homeros
        release: homeros
      annotations:
        perikles/accesses: "alexandros;sokrates;dionysios;herodotos"
    spec:
      containers:
        - name: homeros
          image: ghcr.io/odysseia-greek/homeros
          imagePullPolicy: Always
          ports:
            - name: graphql
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 15
          volumeMounts:
            - name: trace-config-volume
              mountPath: /etc/config
      volumes:
        - name: trace-config-volume
          configMap:
            name: homeros-trace-config
