thrasyboulos/hydor/overlays/romaioi/olympia/homeros/ir.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeros-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`byzantion.odysseia-greek`) && PathPrefix(`/homeros/v1`)
      kind: Rule
      services:
        - name: homeros
          port: 8080
    - match: Host(`byzantion.odysseia-greek`) && PathPrefix(`/graphql`)
      kind: Rule
      services:
        - name: homeros
          port: 8080
