thrasyboulos/hydor/overlays/romaioi/olympia/homeros/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeros
  namespace: olympia
spec:
  ports:
  - name: gateway
    port: 8080
    targetPort: 8080
  selector:
    app: homeros
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    mount.odysseia.io/elastic: "true"
    volumes.odysseia.io/elastic: "true"
  labels:
    app: homeros
  name: homeros
  namespace: olympia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeros
  template:
    metadata:
      annotations:
        perikles/accesses: alexandros-legacy;sokrates;dionysios;herodotos
      labels:
        app: homeros
        release: homeros
        version: v0.3.0
    spec:
      containers:
      - env:
        - name: TRACE_CONFIG_PATH
          value: /etc/config/trace-config.json
        - name: VERSION
          valueFrom:
            fieldRef:
              fieldPath: metadata.labels['version']
        image: ghcr.io/odysseia-greek/homeros:v0.3.0
        imagePullPolicy: Always
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 15
          tcpSocket:
            port: 8080
        name: homeros
        ports:
        - containerPort: 8080
          name: graphql
          protocol: TCP
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          tcpSocket:
            port: 8080
        resources:
          limits:
            memory: 64Mi
          requests:
            cpu: 200m
            memory: 64Mi
        volumeMounts:
        - mountPath: /etc/config
          name: trace-config-volume
        - mountPath: /app/config/elastic
          name: elastic-internal-tls
          readOnly: true
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: ELASTIC_SEARCH_USER
          valueFrom:
            secretKeyRef:
              key: user
              name: agreus-elastic
        - name: ELASTIC_SEARCH_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: agreus-elastic
        image: ghcr.io/odysseia-greek/aristophanes:v0.6.3
        imagePullPolicy: Always
        name: aristophanes
        ports:
        - containerPort: 50052
        resources:
          limits:
            memory: 32Mi
          requests:
            memory: 32Mi
        volumeMounts:
        - mountPath: /app/config/elastic
          name: elastic-internal-tls
          readOnly: true
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: ghcr.io/odysseia-greek/sophokles:v0.1.0
        imagePullPolicy: Always
        name: sophokles
        ports:
        - containerPort: 50053
        resources:
          limits:
            memory: 32Mi
          requests:
            memory: 32Mi
        volumeMounts:
        - mountPath: /app/config/elastic
          name: elastic-internal-tls
          readOnly: true
      serviceAccountName: sophokles-access
      volumes:
      - configMap:
          name: homeros-trace-config
        name: trace-config-volume
      - name: elastic-internal-tls
        secret:
          secretName: aristoteles-es-http-certs-public
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-to-homeros
  namespace: olympia
spec:
  egress:
  - toEntities:
    - all
  endpointSelector:
    matchLabels:
      app: homeros
  ingress:
  - fromEntities:
    - all
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeros-route
  namespace: olympia
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`byzantium.odysseia-greek`) && PathPrefix(`/homeros/v1`)
    services:
    - name: homeros
      port: 8080
  - kind: Rule
    match: Host(`byzantium.odysseia-greek`) && PathPrefix(`/graphql`)
    services:
    - name: homeros
      port: 8080
